--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="src/assets/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>信息安全漏洞平台</title>
+    <title>安全漏洞实战训练场</title>
   </head>
   <body>
     <div id="app"></div>
